# DevSecOps

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  instruction.md  models.py  openenv.yaml  pyproject.toml  requirements.txt  temp_env.py  temp_inf.py  test_env.py  test_realtime.py  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  devsecops_environment.py
